mathml use + examples code fixes

--- a/src/content/docs/learn/titan.mdx
+++ b/src/content/docs/learn/titan.mdx
@@ -22,7 +22,7 @@ Build the future of AI with SKALE on the Titan AI Hub.
 	</a>
 </CardGrid>
 
-## Projects on Nebula
+## Projects on Titan
 
 - ChainGPT: https://nft.chaingpt.dev/ 
 - PaLM AI: https://palmai.tech/ 
