--- a/src/content/docs/tools/skale/sfuel-distribution/contract-distribution.mdx
+++ b/src/content/docs/tools/skale/sfuel-distribution/contract-distribution.mdx
@@ -16,7 +16,7 @@ pragma solidity ^0.8.19;
 
 import "@openzeppelin/contracts/access/AccessControl.sol";
 
-contract sFUEL_Distribution is AccessControl{
+contract sFUELDistribution is AccessControl{
 
     bytes32 public constant MANAGER_ROLE = keccak256("MANAGER_ROLE");
     bytes32 public constant WHITELIST_ROLE = keccak256("WHITELIST_ROLE");
