--- a/src/content/docs/tools/skale/sfuel-distribution/pow_examples/pow_dart.mdx
+++ b/src/content/docs/tools/skale/sfuel-distribution/pow_examples/pow_dart.mdx
@@ -4,6 +4,8 @@ description: PoW Dart
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
+The code below can be found on the [skale.dart repo](https://pub.dev/packages/skale).
+
 ##### 1. Random signer generation
 
 ```dart
