--- a/src/content/docs/tools/skale/sfuel-distribution/pow_examples/pow_javascript.mdx
+++ b/src/content/docs/tools/skale/sfuel-distribution/pow_examples/pow_javascript.mdx
@@ -172,7 +172,7 @@ function mineFreeGas(gasAmount, address, nonce, web3) {
     return candidate.toString();
 }
 
-exports.mineGasForTransaction = mineGasForTransaction
+exports.mineGasForTransaction = mineGasForTransaction;
 ```
 
 ##### 4. Call sFUEL distribution contract with unique Gas Price
