--- a/src/content/docs/tools/gaming/mirage.mdx
+++ b/src/content/docs/tools/gaming/mirage.mdx
@@ -37,7 +37,7 @@ https://github.com/Ankr-network/game-unity-sdk.git?path=Assets/MirageSDK
 
 **Contract Call Example**
 ```c#
-public class NFT_Mint : UseCaseBodyUI
+public class NFTMint : UseCaseBodyUI
 {
     public Contract contract;
     private const string MintMethodName = "safeMint";
@@ -72,7 +72,7 @@ public class NFT_Mint : UseCaseBodyUI
 }
 ```
 
-**NFT_Mint script call**
+**NFTMint script call**
 1. Call contract setupt method to initialize the contract instance
 2. Call the `SmartContractCall` function to perform the contract call
 
