--- a/src/content/docs/tools/libraries/web/ethersv6.mdx
+++ b/src/content/docs/tools/libraries/web/ethersv6.mdx
@@ -47,21 +47,20 @@ yarn add ethers
 **Contract Call Example**
 ```typescript
 import { ethers } from 'ethers';
-import {abi} from "./contract";
-import {chains} from "./chains"
+import { abi } from "./contract";
+import { chains } from "./chains"
 import dotenv from 'dotenv';
 dotenv.config();
 
 //Select which SKALE chain you want to use
-const selected_chain = chains.nebula;
+const selectedChain = chains.nebula;
 
-const skale_provider = selected_chain.chainInfo.testnet.rpcUrl;
-const provider = new ethers.JsonRpcProvider(skale_provider);
+const provider = new ethers.JsonRpcProvider(selectedChain.chainInfo.testnet.rpcUrl);
 
 const pk = process.env.PRIVATE_KEY || "";
 const signer = new ethers.Wallet(pk, provider);
 
-const contract = new ethers.Contract(selected_chain.chainInfo.testnet.contracts[0].address, abi, signer);
+const contract = new ethers.Contract(selectedChain.chainInfo.testnet.contracts[0].address, abi, signer);
 
 // Send transaction to smart contract to update message
 async function ContractSendTx() {    
