--- a/src/content/docs/tools/libraries/web/web3js.mdx
+++ b/src/content/docs/tools/libraries/web/web3js.mdx
@@ -38,23 +38,21 @@ yarn add web3
 **Contract Call Example**
 ```typescript
 import Web3 from "web3";
-import {abi} from "./contract";
-import {chains} from "./chains"
+import { abi } from "./contract";
+import { chains } from "./chains"
 import dotenv from 'dotenv';
 dotenv.config();
 
 //Select which SKALE chain to use
-const selected_chain = chains.nebula;
+const selectedChain = chains.nebula;
 
-var web3 = new Web3(selected_chain.chainInfo.testnet.rpcUrl);
+var web3 = new Web3(selectedChain.chainInfo.testnet.rpcUrl);
 
 const pk = process.env.PRIVATE_KEY || "";
 
 const accountAddress = web3.eth.accounts.privateKeyToAccount(`0x${pk}`)
 
-const contract_address = selected_chain.chainInfo.testnet.contracts[0].address;
-
-const contract = new web3.eth.Contract(abi, contract_address);
+const contract = new web3.eth.Contract(abi, selectedChain.chainInfo.testnet.contracts[0].address);
 
 const functionData = contract.methods.mintTest(accountAddress.address).encodeABI();
 
