--- a/src/content/docs/tools/bridges/meson-fi.mdx
+++ b/src/content/docs/tools/bridges/meson-fi.mdx
@@ -14,11 +14,11 @@ import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
 
 Meson can be integrated in three different ways in an application:
 
-- **Link**: This method requires merely adding a link. A popup window will then guide the user to complete the cross-chain transfer. Link integration is a fast and easy way to integrate Meson, ideal for platforms wanting a quick setup to leverage Meson's cross-chain capabilities.
+- **[Link](https://meson.dev/getting-started/link-integration)**: This method requires merely adding a link. A popup window will then guide the user to complete the cross-chain transfer. Link integration is a fast and easy way to integrate Meson, ideal for platforms wanting a quick setup to leverage Meson's cross-chain capabilities.
 
-- **SDK**: For a more seamless user experience, you can install the meson.to SDK. Beyond the features of Link integration, SDK integration displays your app name & icon, and enables direct interaction with your app's smart contract during a cross-chain transfer.
+- **[SDK](https://meson.dev/getting-started/sdk-integration)**: For a more seamless user experience, you can install the meson.to SDK. Beyond the features of Link integration, SDK integration displays your app name & icon, and enables direct interaction with your app's smart contract during a cross-chain transfer.
 
-- **API**: If you prefer backend integration, you can directly use the Meson protocol through APIs. 
+- **[API](https://meson.dev/getting-started/api-integration)**: If you prefer backend integration, you can directly use the Meson protocol through APIs. 
 
 
 </ToolLayout>
