--- a/src/content/docs/tools/bridges/skale-ima/ima.mdx
+++ b/src/content/docs/tools/bridges/skale-ima/ima.mdx
@@ -4,6 +4,7 @@ description: Intro to SKALE IMA
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
+import skaleBridge from '../../../../../../assets/SKALE_Bridge.mp4';
 
 <ToolLayout
     introParagraph="SKALE makes it possible to manage tokens for end-users between Ethereum and your SKALE Chain. Users can use the Interchain Messaging Agent (IMA) (or SKALE IMA Bridge as it is also known) to transfer ETH, ERC-20, ERC-721 (NFTs), ERC-1155, Dai/USDC/USDT and others into a deposit box on Ethereum, where the IMA will then create clones of the token(s) on your SKALE Chain."
@@ -15,7 +16,6 @@ import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 IMA is flexible and modular - It can support transfer of any token standard, and can also transfer any arbitrary message between chains. See Managing Message Transfer below for more information.
 
 IMA is backed by Ethereum mainnet and SKALE Chain security mechanisms - It uses your SKALE Chain’s 16 randomly selected validator nodes to sign and verify messages between the Ethereum mainnet and your SKALE Chain using BLS threshold signatures and Trusted-Execution Environments (TEE). It uses smart contracts running on Ethereum to manage the locking and unlocking of the deposit box on the mainnet. And, each of the 16 nodes supporting your SKALE Chain each has 20 million SKL tokens staked.
-
 
 ### General Guides
 
@@ -42,5 +42,13 @@ Deposits and withdrawals take only seconds and are secured using BLS Threshold s
 - In order for an Ethereum Mainnet token contract to work with IMA on your SKALE Chain, the token contract copy deployed on SKALE may need to be modified to include MINTABLE and BURNABLE functions. SKALE Chain IMA contracts need to mint and burn the token on SKALE chains to maintain the 1:1 peg with Ethereum. If the token is already using OpenZeppelin’s framework, you can do this by importing ERC20Mintable/ERC721Mintable and ERC20Burnable/ERC721Burnable contracts that extend the functionality to include mintable and burnable functions. You can also do this by manually modifying the contract by adding mintable and burnable functions.
 - The SKALE Chain TokenManager contract must be allowed to call the mint and burn functions (or assigned Minter and Burner roles if using role-based access control) for token contract on SKALE. This enables IMA to mint and burn token clones as the tokens are locked or released on mainnet contracts.
 - The IMA bridge agent batches transactions between chains: up to 4 messages at a time.
+
+### SKALE Portal - Bridge Implemenation
+
+The [SKALE Portal](https://portal.skale.space/) contains a bridging tool created to simplifies the process for end-users to transfer tokens between Ethereum and any SKALE Chains, as well as facilitating token transfers between different SKALE Chains.
+
+The SKALE Portal Bridge is built on top of the SKALE IMA protocol and provides interactive UI from which the users can bridge most tokens of the ecosystem with zero-cost (between SKALE Chains) and near-instant transfers of assets. 
+
+This SKALE Ecosystem feature exists for both [Mainnet](https://portal.skale.space/bridge) and [Testnet](https://testnet.portal.skale.space/bridge) Chains.
 
 </ToolLayout>
