--- a/src/content/docs/tools/bridges/skale-ima/ima.mdx
+++ b/src/content/docs/tools/bridges/skale-ima/ima.mdx
@@ -51,4 +51,9 @@ The SKALE Portal Bridge is built on top of the SKALE IMA protocol and provides i
 
 This SKALE Ecosystem feature exists for both [Mainnet](https://portal.skale.space/bridge) and [Testnet](https://testnet.portal.skale.space/bridge) Chains.
 
+
+<iframe 
+src="https://www.youtube.com/embed/CLq0Kpyeldc">
+</iframe>
+
 </ToolLayout>
