Fix Landing Link

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -15,7 +15,7 @@ hero:
       icon: laptop
       variant: primary
     - text: Learn about SKALE
-      link: /learn
+      link: /learn/about-skale-network
       icon: open-book
 ---
 
