Remove Nodes Elastic Sidechain Usage

--- a/src/content/docs/tools/skale/skale-nodes.mdx
+++ b/src/content/docs/tools/skale/skale-nodes.mdx
@@ -18,7 +18,14 @@ The subnode virtualization is enabled via an innovative containerized architectu
 
 ## Run a Node
 
-The SKALE Network has a set of validators securing the network. Validators provide computation power to the SKALE Network via deploying nodes. The collection of validators and the node(s) they spin up represent the entire validator network that performs work for SKALE Chains (an elastic sidechain or SKALE Chain). ‍ SKALE Chains in the network are operated by a group of virtualized sub-nodes selected from a subset of nodes (validators) in the network and are run on all or a subset (multi-tenancy) of each node’s computation and storage resources.
+The SKALE Network has a pool of validators that run the network.
+Validators provide computation power to the network through nodes (computers running the network software).
+The collection of validators and the node(s) they spin up represent the entire validator network that performs core computing
+for the network as a whole such as validation and consensus.
+
+Individual SKALE Chains in the network are operated by a group of virtualized sub-nodes selected from a
+subset of nodes (the pool) in the network and are run on all or a subset (multi-tenancy) of each node’s
+computation and storage resources.
 
 As each node in the network continues to participate in their assigned SKALE Chains, they’re awarded bounties based upon their performance at the end of each network epoch. Each node will be monitored by their peer nodes. ‍ When a SKALE Chain has reached the end of its lifetime, the resources (computation, storage) of its virtualized sub-nodes will be freed so that validator nodes may participate in newly created SKALE Chains.
 
