Fix Typos, Updated cspell wordlist

--- a/src/content/docs/tools/skale/archive-node.mdx
+++ b/src/content/docs/tools/skale/archive-node.mdx
@@ -110,7 +110,7 @@ SCHAIN_NAME=[SCHAIN NAME FOR YOUR ARCHIVE NODE]
 ```
 
 :::tip[Warning]
-ENFORCE_BTRFS=True formats your attached device as btrfs even if there is another filesytem. Backup the storage before running the command.
+ENFORCE_BTRFS=True formats your attached device as btrfs even if there is another filesystem. Backup the storage before running the command.
 :::
 
 6. Init archive node:
