--- a/src/content/docs/tools/skale/index.mdx
+++ b/src/content/docs/tools/skale/index.mdx
@@ -37,7 +37,7 @@ import { Card, CardGrid } from "@astrojs/starlight/components";
 	</a>
 	<a style="text-decoration: none;"href="/tools/skale/full-sync-node">
 		<Card title="Full Sync Node">
-			Usefull technology to remove read 
+			Useful technology to remove read 
 		</Card>
 	</a>
 </CardGrid>
