--- a/src/content/docs/tools/skale/sfuel-distribution/pow-distribution.mdx
+++ b/src/content/docs/tools/skale/sfuel-distribution/pow-distribution.mdx
@@ -21,7 +21,7 @@ PoW or Proof-of-Work is a mechanism which allows SKALE chain owner to mine suffi
 
 ### PoW algorithm
 
-1. The сlient generates a random 256-bit X by Formula which is equal a unique gasPrice value
+1. The client generates a random 256-bit X by Formula which is equal a unique gasPrice value
 
 <math display="block">
   <mi>X</mi>
