--- a/src/content/docs/tools/skale/skale-nodes.mdx
+++ b/src/content/docs/tools/skale/skale-nodes.mdx
@@ -50,7 +50,7 @@ SKALE Admin evaluates the prospective node to ensure that it’s upholding netwo
 
 This request contains both the required network deposit as well as node metadata collected by the SKALE Daemon (for example IP address, port, public key, etc.).
 
-Once the request has been submitted to SKALE Manager on Ethereum, SKALE Manager randomly defines the prospective node as a 'full node' or a 'fractional node' by assigning different sizes of SKALE Chains to the prospective node. Full nodes have all their resources utilized for a single sidechain, while fractional nodes participate in multiple sidechains (multi-tenancy).
+Once the request has been submitted to SKALE Manager on Ethereum, SKALE Manager randomly defines the prospective node as a 'full node' or a 'fractional node' by assigning different sizes of SKALE Chains to the prospective node. Full nodes have all their resources utilized for a single SKALE Chain, while fractional nodes participate in multiple sidechains (multi-tenancy).
 
 [General Hardware Requirements](https://docs.skale.network/network/v2.2.x/#_prerequisites)
 
