--- a/src/content/docs/tools/skale/skale-proxy.mdx
+++ b/src/content/docs/tools/skale/skale-proxy.mdx
@@ -49,7 +49,7 @@ Recommended requirements:
  * 4 physical core CPU
  * 50 GB storage
  
-One of the main parameter for the reverse-proxy is a bandwidth, reverse-proxy is redirecting requests and not use as much computational power and storage. So it is necessary to have a good bandwitdth and create a machine at the close location to the area of usage(Europe, Asia, US, ...)
+One of the main parameter for the reverse-proxy is a bandwidth, reverse-proxy is redirecting requests and not use as much computational power and storage. So it is necessary to have a good bandwidth and create a machine at the close location to the area of usage(Europe, Asia, US, ...)
 
 - Minimum requirements: bandwidth support for 300 req/s
 
