--- a/src/content/docs/tools/wallets/aggregator/wallet-connect.mdx
+++ b/src/content/docs/tools/wallets/aggregator/wallet-connect.mdx
@@ -11,7 +11,7 @@ import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
     toolDocsLink="https://docs.walletconnect.com/getting-started"
 >
 
-## Implemention Example
+## Implementation Example
 
 **Package Install**
 ```shell
