--- a/src/content/docs/tools/wallets/custodial.mdx
+++ b/src/content/docs/tools/wallets/custodial.mdx
@@ -12,7 +12,7 @@ import {Content as InvisibleSigners} from './custodial/invisible-signer.mdx';
 <TabItem label="Stardust">
 <Stardust/>
 </TabItem>
-<TabItem label="Insible Signer">
+<TabItem label="Invisible Signer">
 <InvisibleSigners/>
 </TabItem>
 </Tabs>
