--- a/src/content/docs/tools/wallets/mpc/thirdweb.mdx
+++ b/src/content/docs/tools/wallets/mpc/thirdweb.mdx
@@ -6,7 +6,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
-    introParagraph="Thirdweb provides a wallet solution that can accomodate different needs. Their connect wallet UI allows connecting with the common industry wallets (ex: Metamask, Coinbase, WalletConnect) as well as creating an MPC wallet with solcial logins."
+    introParagraph="Thirdweb provides a wallet solution that can accommodate different needs. Their connect wallet UI allows connecting with the common industry wallets (ex: Metamask, Coinbase, WalletConnect) as well as creating an MPC wallet with social logins."
     toolName="Thirdweb"
     toolLink="https://portal.thirdweb.com/wallets"
     toolDocsLink="https://portal.thirdweb.com/wallets"
