--- a/src/content/docs/tools/wallets/non-custodial/trezor.mdx
+++ b/src/content/docs/tools/wallets/non-custodial/trezor.mdx
@@ -22,7 +22,7 @@ npm install @trezor/connect
 import TrezorApi from "trezor-connect";
 
 const supportedNetworkURLs = {
-  your_chain_id_numeber: "your_skale_network_rpc"
+  your_chain_id_number: "your_skale_network_rpc"
 };
 
 const defaultNetwork = 1;
