--- a/src/content/docs/tools/skale/sfuel-distribution/api-distribution.mdx
+++ b/src/content/docs/tools/skale/sfuel-distribution/api-distribution.mdx
@@ -5,7 +5,7 @@ description: API Distribution
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
-This distribution method is an application owned distribution method as opposed to an on-chain distribution. The API faciliates sFUEL distribution to users by exposing an API endpoint through a public or private endpoint.
+This distribution method is an application owned distribution method as opposed to an on-chain distribution. The API facilitates sFUEL distribution to users by exposing an API endpoint through a public or private endpoint.
 
 The default infrastructure option showed in the documentation is public by default as well as very minimal. It is designed to be easily extended by projects with various middlewares, protections, etc.
 
@@ -57,13 +57,13 @@ Add an Ethereum private key to your .env file and change the RPC to match your S
 
 ##### 4. Run the API
 
-To run the API locally and autoreload when changes occur, run:
+To run the API locally and hot-reload when changes occur, run:
 
 ```sh
 yarn dev
 ```
 
-To run the API without autoreload, run:
+To run the API without hot-reload, run:
 ```sh
 yarn start
 ```
