--- a/src/content/docs/tools/skale/sfuel-distribution/index.mdx
+++ b/src/content/docs/tools/skale/sfuel-distribution/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: sFUEL Distribution
-description: Distribtuion of the SKALE Native Gas Token
+description: Distribution of the SKALE Native Gas Token
 ---
 
 import { Tabs, TabItem } from '@astrojs/starlight/components';
