Complete Typo Fix

--- a/src/content/docs/tools/bridges/layer-zero.mdx
+++ b/src/content/docs/tools/bridges/layer-zero.mdx
@@ -73,7 +73,7 @@ npx hardhat setpeer --origin mumbai --destination europa --network mumbai
 
 2. **Bridge**
 
-After seting the peers you can now procced you bridging the tokens.
+After setting the peers you can now proceed you bridging the tokens.
 
 <Tabs>
 <TabItem label="Generic Example">
