--- a/src/content/docs/tools/bridges/skale-ima/ima.mdx
+++ b/src/content/docs/tools/bridges/skale-ima/ima.mdx
@@ -42,7 +42,7 @@ Deposits and withdrawals take only seconds and are secured using BLS Threshold s
 - The SKALE Chain TokenManager contract must be allowed to call the mint and burn functions (or assigned Minter and Burner roles if using role-based access control) for token contract on SKALE. This enables IMA to mint and burn token clones as the tokens are locked or released on mainnet contracts.
 - The IMA bridge agent batches transactions between chains: up to 4 messages at a time.
 
-### SKALE Portal - Bridge Implemenation
+### SKALE Portal - Bridge Implementation
 
 The [SKALE Portal](https://portal.skale.space/) contains a bridging tool created to simplifies the process for end-users to transfer tokens between Ethereum and any SKALE Chains, as well as facilitating token transfers between different SKALE Chains.
 
