--- a/src/content/docs/tools/bridges/skale-ima/imajs.mdx
+++ b/src/content/docs/tools/bridges/skale-ima/imajs.mdx
@@ -6,7 +6,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
-    introParagraph="IMA.JS is a Typescirpt/Javascript library which implements client for SKALE Interchain Messaging Agent (IMA)."
+    introParagraph="IMA.JS is a Typescript/JavaScript library which implements client for SKALE Interchain Messaging Agent (IMA)."
     toolName="IMA.js"
     toolLink=""
     toolDocsLink=""
