--- a/src/content/docs/tools/gaming/index.mdx
+++ b/src/content/docs/tools/gaming/index.mdx
@@ -11,7 +11,7 @@ import { Card, CardGrid } from "@astrojs/starlight/components";
 <CardGrid>
 	<a style="text-decoration: none;"href="/tools/gaming/eidolon">
 		<Card title="Eidolon">
-			SKALE Unity SDK. Already prepared to accomodate all SKALE developers needs
+			SKALE Unity SDK. Already prepared to accommodate all SKALE developers needs
 		</Card>
 	</a>
 	<a style="text-decoration: none;"href="/tools/gaming/mirage">
