--- a/src/content/docs/tools/gaming/mirage.mdx
+++ b/src/content/docs/tools/gaming/mirage.mdx
@@ -73,7 +73,7 @@ public class NFTMint : UseCaseBodyUI
 ```
 
 **NFTMint script call**
-1. Call contract setupt method to initialize the contract instance
+1. Call contract setup method to initialize the contract instance
 2. Call the `SmartContractCall` function to perform the contract call
 
 </TabItem>
