--- a/src/content/docs/tools/index.mdx
+++ b/src/content/docs/tools/index.mdx
@@ -20,7 +20,7 @@ The tools section covers available tooling for developing on SKALE. This include
 	</a>
 	<a style="text-decoration: none;"href="/tools/contracts">
 		<Card title="Contracts">
-			Popular Contracts and Contract based Toling
+			Popular Contracts and Contract based Tooling
 		</Card>
 	</a>
 	<a style="text-decoration: none;"href="/tools/data">
@@ -33,7 +33,7 @@ The tools section covers available tooling for developing on SKALE. This include
 			Gaming SDKs for Web3 Games
 		</Card>
 	</a>
-	<a style="text-decoration: none;"href="/tools/libaries">
+	<a style="text-decoration: none;"href="/tools/libraries">
 		<Card title="EVM Libraries">
 			See commonly used EVM SDKs in languages like JavaScript, C#, and more
 		</Card>
@@ -44,13 +44,13 @@ The tools section covers available tooling for developing on SKALE. This include
 		</Card>
 	</a>
 	<a style="text-decoration: none;"href="/tools/skale">
-		<Card title="SKALE Specifc">
+		<Card title="SKALE Specific">
 			Use libraries and packages built to improve using low level SKALE functionality
 		</Card>
 	</a>
 	<a style="text-decoration: none;"href="/tools/wallets">
 		<Card title="Wallets">
-			Explore differnt non-custodial, custodial, and MPC wallets that support SKALE Chains
+			Explore different non-custodial, custodial, and MPC wallets that support SKALE Chains
 		</Card>
 	</a>
 </CardGrid>
