--- a/src/content/docs/tools/libraries/unity/nethereum.mdx
+++ b/src/content/docs/tools/libraries/unity/nethereum.mdx
@@ -19,7 +19,7 @@ The main features of this web3 library are:
 - JSON RPC / IPC Ethereum core methods
 - Simplified smart contract interaction for deployment, function calling, transaction and event filtering and decoding of topics
 - [Unity 3d](https://docs.nethereum.com/en/latest/unity3d-introduction/) integration
-- ABI to .Net type encoding and decoding, including attribute-based for complex object deserialisation
+- ABI to .Net type encoding and decoding, including attribute-based for complex object serialization
 - Libraries for standard contracts Token, [ENS](https://ens.domains/) and [Uport](https://www.uport.me/)
 - Key storage using Web3 storage standard, compatible with Geth and Parity.
 
@@ -27,7 +27,7 @@ The main features of this web3 library are:
 
 The Nethereum.Unity library is a Nethereum specific Unity library and api which provides support for UnityWebRequest to interact with Ethereum using RPC over Http.
 
-All Nethreum realeases can be found [here](https://github.com/Nethereum/Nethereum/releases).
+All Nethereum releases can be found [here](https://github.com/Nethereum/Nethereum/releases).
 
 The following example showcases how to get the current balance of a wallet.
 
