--- a/src/content/docs/tools/contracts/hardhat.mdx
+++ b/src/content/docs/tools/contracts/hardhat.mdx
@@ -157,6 +157,6 @@ npx hardhat run scripts/deploy.js --network <network name you defined on hardhat
 
 6. **Command prompt to verify contract**
 ```sh
-npx hardhat verify --network <network name> <deployed contract address> <contract deployed contructor arguments>
+npx hardhat verify --network <network name> <deployed contract address> <contract deployed constructor arguments>
 ```
 </ToolLayout>
