--- a/src/content/docs/tools/wallets/custodial/crossmint.mdx
+++ b/src/content/docs/tools/wallets/custodial/crossmint.mdx
@@ -5,7 +5,7 @@ description: Create Custodial Wallets using Crossmint's API
 import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
-    introParagraph="[Crossmint]("https://www.crossmint.com/?utm_source=backlinks&utm_medium=docs&utm_campaign=skale) is an enterprise-grade web3 development platform that lets you deploy smart contracts, create email wallets, enable credit-card and cross chain payments, and use APIs to create, distribute, sell, store, and edit NFTs. By abstracting away the core complexities of the Blockchain, Crossmint allows you to build NFT applications without requiring any blockchain experience or holding cryptocurrency, and making the blockchain invisible to end users. Crossmint enables you to provide a Web2 experience for your Web3 apps and onboard users."
+    introParagraph="[Crossmint](https://www.crossmint.com/?utm_source=backlinks&utm_medium=docs&utm_campaign=skale) is an enterprise-grade web3 development platform that lets you deploy smart contracts, create email wallets, enable credit-card and cross chain payments, and use APIs to create, distribute, sell, store, and edit NFTs. By abstracting away the core complexities of the Blockchain, Crossmint allows you to build NFT applications without requiring any blockchain experience or holding cryptocurrency, and making the blockchain invisible to end users. Crossmint enables you to provide a Web2 experience for your Web3 apps and onboard users."
     toolName="Crossmint"
     toolLink="https://www.crossmint.com/signin?callbackUrl=/console/overview/?utm_source=backlinks&utm_medium=docs&utm_campaign=skale"
     toolDocsLink="https://docs.crossmint.com/introduction/about-crossmint?utm_source=backlinks&utm_medium=docs&utm_campaign=skale"
