--- a/src/content/docs/tools/wallets/custodial.mdx
+++ b/src/content/docs/tools/wallets/custodial.mdx
@@ -5,7 +5,7 @@ description: Intro to Custodial Wallets
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import {Content as Stardust} from './custodial/stardust.mdx';
 import {Content as InvisibleSigners} from './custodial/invisible-signer.mdx';
-import {Content as Crossmint} from `./custodial/crossmint.mdx`;
+import {Content as Crossmint} from './custodial/crossmint.mdx';
 
 
 
@@ -15,5 +15,8 @@ import {Content as Crossmint} from `./custodial/crossmint.mdx`;
 </TabItem>
 <TabItem label="Invisible Signer">
 <InvisibleSigners/>
+</TabItem>
+<TabItem label="Crossmint">
+<Crossmint>
 </TabItem>
 </Tabs>
