structure payments + nfts

--- a/src/content/docs/tools/index.mdx
+++ b/src/content/docs/tools/index.mdx
@@ -13,6 +13,26 @@ The tools section covers available tooling for developing on SKALE. This include
 ## Explore Tools by Category
 
 <CardGrid>
+	<a style="text-decoration: none;"href="/tools/wallets">
+		<Card title="Wallets">
+			Explore different non-custodial, custodial, and MPC wallets that support SKALE Chains
+		</Card>
+	</a>
+	<a style="text-decoration: none;"href="/tools/libraries">
+		<Card title="EVM Libraries">
+			See commonly used EVM SDKs in languages like JavaScript, C#, and more
+		</Card>
+	</a>
+	<a style="text-decoration: none;"href="/tools/nfts">
+		<Card title="NFTs Tools">
+			Check the popular SKALE tools to be used in your NFT collections
+		</Card>
+	</a>
+	<a style="text-decoration: none;"href="/tools/gaming">
+		<Card title="Gaming SDKs">
+			Gaming SDKs for Web3 Games
+		</Card>
+	</a>
 	<a style="text-decoration: none;"href="/tools/bridges">
 		<Card title="Bridges">
 			Enable messages and tokens to be moved with various bridges and libraries
@@ -28,29 +48,19 @@ The tools section covers available tooling for developing on SKALE. This include
 			Tooling to improve access to blockchain data
 		</Card>
 	</a>
-	<a style="text-decoration: none;"href="/tools/gaming">
-		<Card title="Gaming SDKs">
-			Gaming SDKs for Web3 Games
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/libraries">
-		<Card title="EVM Libraries">
-			See commonly used EVM SDKs in languages like JavaScript, C#, and more
-		</Card>
-	</a>
 	<a style="text-decoration: none;"href="/tools/oracles">
 		<Card title="Oracles">
 			Access blockchain data and price feeds
 		</Card>
 	</a>
-	<a style="text-decoration: none;"href="/tools/skale">
-		<Card title="SKALE Specific">
-			Use libraries and packages built to improve using low level SKALE functionality
+	<a style="text-decoration: none;"href="/tools/payments">
+		<Card title="Payments">
+			Check the best way to use payments on SKALE chains
 		</Card>
 	</a>
-	<a style="text-decoration: none;"href="/tools/wallets">
-		<Card title="Wallets">
-			Explore different non-custodial, custodial, and MPC wallets that support SKALE Chains
+	<a style="text-decoration: none;"href="/tools/skale">
+		<Card title="SKALE Specific">
+			Use libraries and packages specific for the SKALE ecosystem
 		</Card>
 	</a>
 </CardGrid>
