--- a/src/content/docs/builders/chain-operators/overview.mdx
+++ b/src/content/docs/builders/chain-operators/overview.mdx
@@ -1,4 +1,4 @@
 ---
-title: App Developer Overview
-description: Overview for building apps on SKALE Network
+title: Chain Operators Overview
+description: Overview for operators of SKALE Chains 
 ---
