--- a/src/content/docs/builders/node-operators/overview.mdx
+++ b/src/content/docs/builders/node-operators/overview.mdx
@@ -1,4 +1,4 @@
 ---
 title: Node Operator Overview
-description: Overview for validators and node operators of SKALE Networ
+description: Overview for validators and node operators of SKALE Network
 ---
