--- a/src/content/docs/builders/index.mdx
+++ b/src/content/docs/builders/index.mdx
@@ -24,8 +24,14 @@ import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 		title="Tools"
 		href="/builders/tools/overview"
 	/>
-	<LinkCard
-		title="Wallets & CEXs"
-		href="/builders/wallets-cexs/overview"
-	/>
 </CardGrid>
+
+### Integrating SKALE for Infra Partners
+
+If you are a centralized exchange, SDK, wallet or some other infrastcture that is looking
+to add suppoort for the SKALE Network, then the following integration guide is a great place to start.
+
+<LinkCard
+		title="Integration Guide"
+		href="/builders/integration-guide"
+/>
