--- a/src/content/docs/builders/chain-operators/access-control.mdx
+++ b/src/content/docs/builders/chain-operators/access-control.mdx
@@ -1,36 +1,66 @@
 ---
-title: Chain Operators Overview
-description: Overview for operators of SKALE Chains 
+title: SKALE Chain Access Control
+description: Controlling access to a SKALE Chain
 ---
 
-import { LinkCard, CardGrid } from '@astrojs/starlight/components';
+SKALE Chains have several ways to manage access control, meaning who is capable of sending a transaction to the SKALE Chain or who is capable of deploying new contracts. There are several methods to manage access: distribution of sFUEL to SKALE Chain users and the ConfigController contract, which authorizes specific contracts to deploy new contracts (CREATE2), enables Multi Transaction Mode, and enables Free Contract Deployment. The next paragraph will describe the listed methods.
 
-The SKALE Network is a multi-chain network where "owning" or "operating" a SKALE Chain
-does not require the owner or operator to actually run the nodes. This is because the SKALE Network
-has validators to run the SKALE Chains.
+> **Note**  
+> If you encounter a `Contract Creation Error: Out of gas` error when deploying a contract, this likely means that the address does not have deployer access. See [whitelisting an address](xref:_whitelist).
 
-The operator(s) of a SKALE Chain have special privleges that enable them to manage the chain and provide
-access and resources to others; whether in their team for a dedicated AppChain or for a 3rd party if a HubChain.
+## Config Controller
 
-<CardGrid>
-	<LinkCard
-		title="Architecture"
-		href="/builders/chain-operators/architecture"
-	/>
-    <LinkCard
-		title="Access Control"
-		href="/builders/chain-operators/access-control"
-	/>
-	<LinkCard
-		title="Adminstrative Contracts"
-		href="/builders/chain-operators/administrative-contracts"
-	/>
-	<LinkCard
-		title="Multisig Management"
-		href="/builders/chain-operators/multisig"
-	/>
-    <LinkCard
-		title="Submit Chain Metadata"
-		href="/builders/chain-operators/skale-chain-wallet"
-	/>
-</CardGrid>
+New SKALE Chains are set only to allow the SKALE Chain owner and CREATE/CREATE2 opcodes the ability to deploy new contracts. Other addresses can be permitted on the fly to deploy contracts by whitelisting addresses.
+
+The predeployed ConfigController contract's address is `0xD2002000000000000000000000000000000000D2` and contains several settings covered below:
+
+### Free Contract Deployment
+
+- Allows any account to deploy contracts on the SKALE Chain. Also, you must be assigned as `DEPLOYER_ADMIN_ROLE` - only in this way can you run these methods. You can configure your own SKALE Chain to enable/disable this mode.
+
+  - `enableFreeContractDeployment()` - enables Free Contract Deployment
+  - `disableFreeContractDeployment()` - disables Free Contract Deployment
+
+### Whitelist
+
+- A list of accounts that are allowed to deploy contracts. The whitelist is enabled automatically when Free Contract Deployment is disabled. Also, you must be assigned as `DEPLOYER_ADMIN_ROLE` or SKALE Chain owner to add an account to the whitelist, which means that account will be assigned as a `DEPLOYER_ROLE`.
+
+  - `addToWhitelist(address addr)` - adds accounts that are allowed to deploy contracts
+  - `removeFromWhitelist(address addr)` - removes accounts that are allowed to deploy contracts
+
+### Multi Transaction Mode (MTM)
+
+- Allows multiple transactions from the same account to be included in one block. It's implemented in the same way as it works on popular blockchain networks (Ethereum, Bitcoin). Also, you must be assigned as `MTM_ADMIN_ROLE` - only in this way can you run these methods. You can configure your own SKALE Chain to enable/disable this mode.
+
+  - `enableMTM()` - enables MTM on SKALE Chain
+  - `disableMTM()` - disables MTM on SKALE Chain
+
+> **Note**  
+> MTM functionality works, but it cannot be enabled/disabled yet from the config-controller (so when it's set, it's always enabled).
+
+The ABI for the ConfigController is available at the [release packages](https://github.com/skalenetwork/config-controller/releases).
+
+## SKALE FUEL (sFUEL)
+
+The SKALE Chain owner (coinbase address) is the only account allocated sFUEL when the SKALE Chain is created (if using the SDK, you can add additional allocations during setup). The owner account is therefore responsible for distributing sFUEL to users.
+
+The total amount of sFUEL allocation is set in the genesis block of each SKALE Chain and therefore can't be changed once a chain is deployed.
+
+> **Note**  
+> sFUEL, unlike ETH, has no value, but like ETH, is used to meter transaction usage on SKALE Chains.
+
+SKALE Chain owners can apply a variety of methods to distribute sFUEL to users:
+- Direct transaction from the owner to an address
+- Sending an allocation of sFUEL to a SKALE Chain contract, which applies some logic to distribute sFUEL to an address.
+
+When addresses use sFUEL to perform transactions, the sFUEL fee used to conduct the transaction is recirculated back to the coinbase address.
+
+> **Important**  
+> SKALE Chain owners should select how and how much sFUEL to distribute to addresses. How much might depend on various factors such as the number of addresses to distribute to and the sFUEL transaction fees performed by these addresses.
+
+> **Note**  
+> To view Real ETH on SKALE Chains as transferred by the IMA bridge, you can use the _informational RPC ports_ for your endpoint. The port information is presented when the SKALE Chain deployment is complete.
+
+## IMA Access Control
+
+For details on IMA Bridge access control features, see [IMA Access Control](xref:ima::access-control.adoc).
