Resolve Custom Paths for Overriden Components

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -5,9 +5,9 @@ template: splash
 hero:
   tagline: Build on SKALE with zero gas fees, instant finality, and top-tier DX
   image:
-    alt: Hello world
+    alt: Welcome to SKALE
     light: ../../assets/skale_logo_b.svg
-    dark: ../../assets/skale_logo_w.svg
+    dark: ../../assets/skale_token_w.svg
     file: ../../assets/skale_token_w.svg
   actions:
     - text: Build on SKALE
