Finish Porting Chain Operators

--- a/src/content/docs/builders/chain-operators/overview.mdx
+++ b/src/content/docs/builders/chain-operators/overview.mdx
@@ -25,14 +25,15 @@ access and resources to others; whether in their team for a dedicated AppChain o
 		title="Adminstrative Contracts"
 		href="/builders/chain-operators/administrative-contracts"
 	/>
-	<LinkCard
+	{/* TODO */}
+	{/* <LinkCard
 		title="Best Practices"
 		href="/builders/chain-operators/best-practices"
 	/>
 	<LinkCard
 		title="Multisig Management"
 		href="/builders/chain-operators/multisig"
-	/>
+	/> */}
     <LinkCard
 		title="SKALE Chain Wallet"
 		href="/builders/chain-operators/skale-chain-wallet"
