--- a/src/content/docs/builders/chain-operators/multisig.mdx
+++ b/src/content/docs/builders/chain-operators/multisig.mdx
@@ -1,36 +1,6 @@
 ---
-title: Chain Operators Overview
-description: Overview for operators of SKALE Chains 
+title: Managing with the Multisig
+description: Management with the Multisig
 ---
 
-import { LinkCard, CardGrid } from '@astrojs/starlight/components';
-
-The SKALE Network is a multi-chain network where "owning" or "operating" a SKALE Chain
-does not require the owner or operator to actually run the nodes. This is because the SKALE Network
-has validators to run the SKALE Chains.
-
-The operator(s) of a SKALE Chain have special privleges that enable them to manage the chain and provide
-access and resources to others; whether in their team for a dedicated AppChain or for a 3rd party if a HubChain.
-
-<CardGrid>
-	<LinkCard
-		title="Architecture"
-		href="/builders/chain-operators/architecture"
-	/>
-    <LinkCard
-		title="Access Control"
-		href="/builders/chain-operators/access-control"
-	/>
-	<LinkCard
-		title="Adminstrative Contracts"
-		href="/builders/chain-operators/administrative-contracts"
-	/>
-	<LinkCard
-		title="Multisig Management"
-		href="/builders/chain-operators/multisig"
-	/>
-    <LinkCard
-		title="Submit Chain Metadata"
-		href="/builders/chain-operators/skale-chain-wallet"
-	/>
-</CardGrid>
+Coming Soon
