feat(payments&nfts):structure+content

--- a/src/content/docs/tools/nfts/marketplaces/pixelrealm.mdx
+++ b/src/content/docs/tools/nfts/marketplaces/pixelrealm.mdx
@@ -1,6 +1,6 @@
 ---
-title: Crossmint NFT API
-description: Intro to Crossmint NFT API
+title: Pixelrealm
+description: Intro to Pixelrealm
 ---
 import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
