--- a/src/content/docs/tools/nfts/marketplaces/snag.mdx
+++ b/src/content/docs/tools/nfts/marketplaces/snag.mdx
@@ -1,6 +1,6 @@
 ---
-title: NFTb
-description: Intro to NFTb
+title: Snag
+description: Intro to Snag
 ---
 import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
