--- a/src/content/docs/tools/nfts/marketplaces.mdx
+++ b/src/content/docs/tools/nfts/marketplaces.mdx
@@ -3,10 +3,18 @@ title: NFT Marketplaces
 description: Intro to NFT Marketplaces
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import {Content as NFTb} from './marketplaces/nftb.mdx';
+import {Content as Keepsake} from './marketplaces/keepsake.mdx';
+import {Content as Pixelrealm} from './marketplaces/pixelrealm.mdx';
+import {Content as Snag} from './marketplaces/snag.mdx';
 
 <Tabs>
-<TabItem label="NFTb">
-<NFTb/>
+<TabItem label="Keepsake">
+<Keepsake/>
+</TabItem>
+<TabItem label="Pixelrealm">
+<Keepsake/>
+</TabItem>
+<TabItem label="Snag">
+<Keepsake/>
 </TabItem>
 </Tabs>
