--- a/src/content/docs/tools/payments/on-ramp/transak.mdx
+++ b/src/content/docs/tools/payments/on-ramp/transak.mdx
@@ -5,10 +5,12 @@ description: Intro to Transak
 import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
-    introParagraph=""
-    toolName=""
-    toolLink=""
-    toolDocsLink=""
+    introParagraph="Transak on-ramp solution allows users to buy crypto assets with fiat."
+    toolName="Transak"
+    toolLink="https://portal.skale.space/onramp"
+    toolDocsLink="https://portal.skale.space/onramp"
 >
+
+The Transak On-Ramp integration was done on the SKALE Europa Hub and allows users to purchase Europa USDC with fiat.
 
 </ToolLayout>
