Fix SKALE Section

--- a/src/content/docs/builders/tools/skale/sfuel-distribution/api-distribution.mdx
+++ b/src/content/docs/builders/tools/skale/sfuel-distribution/api-distribution.mdx
@@ -3,7 +3,7 @@ title: API Distribution
 description: API Distribution
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
 
 This distribution method is an application owned distribution method as opposed to an on-chain distribution. The API facilitates sFUEL distribution to users by exposing an API endpoint through a public or private endpoint.
 
