--- a/src/content/docs/builders/tools/skale/sfuel-distribution/pow-distribution.mdx
+++ b/src/content/docs/builders/tools/skale/sfuel-distribution/pow-distribution.mdx
@@ -3,7 +3,7 @@ title: POW Distribution
 description: POW  Distribution
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
 import { Content as Csharp } from './pow_examples/pow_csharp.mdx';
 import { Content as Dart } from './pow_examples/pow_dart.mdx';
 import { Content as Javascript } from './pow_examples/pow_javascript.mdx';
