--- a/src/content/docs/builders/tools/skale/blockscout.mdx
+++ b/src/content/docs/builders/tools/skale/blockscout.mdx
@@ -3,7 +3,7 @@ title: Blockscout
 description: Intro to Blockscout
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="Blockscout is a open-source blockchain explorer available for use by any Ethereum Virtual Machine (EVM) chain."
