Fix sFUELS tation Route

--- a/src/content/docs/builders/tools/skale/sfuel-station.mdx
+++ b/src/content/docs/builders/tools/skale/sfuel-station.mdx
@@ -3,7 +3,7 @@ title: sFUEL Station
 description: Intro to sFUEL Station
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
 	introParagraph="The sFUEL Station is a general distribution for the SKALE Network."
